[package]
name = "csr"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "stress-ssh-agent"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
rand = "0.8"
hex = "0.4"
aws-lc-rs = "1.0"
ssh-agent-client-rs = "1.1"
ssh-key = "0.6"
ssh-encoding = "0.1"

